# predictive-maintenance-system

./: .env.example  .gitignore  README.md  main.py  main_cmapss.py  mkdocs.yml  pyproject.toml  requirements.txt  run_statistical_analysis.py
.github/workflows/: ci.yml
configs/: config.yaml
dashboards/: streamlit_app.py
docs/: api.md  architecture.md  index.md  usage.md
experiments/: logs.csv  results_summary.md  statistical_report.txt  tuned_results_FD001_FD002.txt
models/: metadata.json
src/: cmapss_loader.py  config.py  cross_validate.py  data_pipeline.py  evaluate.py  evaluate_failure.py  evaluate_regression.py  feature_engineering.py  model_utils.py  nested_cv.py  preprocessing.py  statistical_tests.py  tracker.py  train_dl.py  train_dl_rul.py  train_ml.py  train_ml_rul.py  train_xgb_rul.py
tests/: test_feature_engineering.py  test_integration.py  test_model.py  test_nested_cv.py  test_performance.py  test_preprocessing.py  test_statistical_tests.py
